--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "backend:development": "nodemon app.js",
     "frontend:build": "webpack --progress --config webpack.config.build.js",
     "frontend:development": "webpack serve --progress --config webpack.config.development.js",
-    "start": "npm run development"
+    "start": "concurrently --kill-others \"npm run backend:development\" \"npm run frontend:development\""
   },
   "author": "Amadou Affo",
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^7.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
@@ -42,6 +43,8 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "nodemon": "^2.0.18"
+    "jade": "^1.11.0",
+    "nodemon": "^2.0.18",
+    "pug": "^3.0.2"
   }
 }
