--- a/package.json
+++ b/package.json
@@ -42,9 +42,17 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@prismicio/client": "^6.6.1",
+    "@prismicio/helpers": "^2.3.1",
+    "dotenv": "^16.0.1",
+    "errorhandler": "^1.5.1",
     "express": "^4.18.1",
     "jade": "^1.11.0",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.18",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ua-parser-js": "^1.0.2"
   }
 }
