--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
     "include-media": "^1.4.10",
+    "loadash": "^1.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "normalize-wheel": "^1.0.1",
     "postcss-loader": "^7.0.0",
+    "prefix": "^1.0.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.3",
@@ -49,6 +52,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.18.1",
     "jade": "^1.11.0",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
